# multi_camera_feature_tracking

./: CMakeLists.txt  README.md
src/image_features/: CMakeLists.txt  package.xml
src/image_features/msg/: Features.msg
src/image_features/src/: feature_descriptor_node.py  features_listener.py  half_encoder_half_decoder_64.h5  model19.h5  rosbagFeaturesWriter.py  tracker.py  tsp_net.py
src/net_inference/: CMakeLists.txt  package.xml
src/net_inference/src/: half_enc_half_dec.pb  inference.cpp
