<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>net_inference</name>
  <version>0.0.0</version>
  <description>net_inference</description>
  <maintainer email="some@example.com">Author</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>tensorflow_catkin</depend>
  <depend>cv_bridge</depend>
  <depend>opencv3_catkin</depend>
  <depend>eigen_catkin</depend>
</package>
